# FPSSmoother

./: CMakeLists.txt  CMakePresets.json
FPSSmoother/: D3D11DeviceProxy.cpp  D3D11DeviceProxy.h  DXGIAdapterProxy.cpp  DXGIAdapterProxy.h  DXGIDeviceProxy.cpp  DXGIDeviceProxy.h  DXGIFactoryProxy.cpp  DXGIFactoryProxy.h  DXGIObjectProxy.cpp  DXGIObjectProxy.h  DXGIOutputProxy.cpp  DXGISwapChainProxy.cpp  DXGISwapChainProxy.h  Util.cpp  Util.h  config.cpp  config.h  fpss.ini  globals.cpp  globals.h  proxy_utils.cpp  proxy_utils.h  utils.cpp  utils.h
FPSSmoother/Proxies/: D3D11DeviceProxy.cpp  D3D11DeviceProxy.h  D3D12CommandQueueProxy.cpp  D3D12CommandQueueProxy.h  D3D12DeviceProxy.cpp  D3D12DeviceProxy.h  DXGIAdapterProxy.cpp  DXGIAdapterProxy.h  DXGIDeviceProxy.cpp  DXGIDeviceProxy.h  DXGIFactoryProxy.cpp  DXGIFactoryProxy.h  DXGIObjectProxy.cpp  DXGIObjectProxy.h  DXGIOutputProxy.cpp  DXGIOutputProxy.h  DXGISwapChainProxy.cpp  DXGISwapChainProxy.h  ICloneable.h  ProxyBase.h
FakeD3d11/: d3d11.def  main.cpp  main.h
FakeDxgi/: d3d11.cpp  d3d11.h  d3d12.cpp  d3d12.h  dxgi.cpp  dxgi.def  dxgi.h  dxgi_preferences.ini  main.cpp  main.h
